# simple_renderer

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  light.cpp  makefile  render.cpp  scene.cpp  surface.cpp
headers/: camera.h  common.h  interaction.h  light.h  render.h  scene.h  surface.h  texture.h  vec.h
include/: constants.h  functions.h
report/: report.tex
scenes/monkey/: scene.blend  scene.blend1  scene.mtl
scenes/q4/: scene.json
shaders/: fragment.glsl  vertex.glsl
src/: callback.cpp  init.cpp  render.cpp  shapes.cpp  surface.cpp  texture.cpp
